@@ -924,7 +924,7 @@ public class StormTrackControl extends DisplayControlImpl {
                                    boolean writeAsPreference) {
         okWays = new Hashtable();
         for (Way way : ways) {
-            okWays.put(way.getId(), new Boolean(true));
+            okWays.put(way.getId(), Boolean.valueOf(true));
         }
         if (writeAsPreference) {
             putPreference(getPref(PREF_OKWAYS), okWays);
@@ -942,7 +942,7 @@ public class StormTrackControl extends DisplayControlImpl {
                                      boolean writeAsPreference) {
         okParams = new Hashtable();
         for (StormParam param : params) {
-            okParams.put(param.getName(), new Boolean(true));
+            okParams.put(param.getName(), Boolean.valueOf(true));
         }
         if (writeAsPreference) {
             putPreference(getPref(PREF_OKPARAMS), okParams);
@@ -1571,7 +1571,7 @@ public class StormTrackControl extends DisplayControlImpl {
         sdf.setTimeZone(DateUtil.TIMEZONE_GMT);
         GregorianCalendar cal = new GregorianCalendar(DateUtil.TIMEZONE_GMT);
         Hashtable<String, Boolean> obsWays = new Hashtable<String, Boolean>();
-        obsWays.put(Way.OBSERVATION.toString(), new Boolean(true));
+        obsWays.put(Way.OBSERVATION.toString(), Boolean.valueOf(true));
         String  currentMessage = "";
         String  errors         = "";
         boolean doYearTime     = yearTimeMode == YEAR_TIME_MODE_YEAR;
@@ -1873,13 +1873,13 @@ public class StormTrackControl extends DisplayControlImpl {
             StormInfo stormInfo = stormInfos.get(i);
             cal.setTime(ucar.visad.Util.makeDate(stormInfo.getStartTime()));
             int year = cal.get(Calendar.YEAR);
-            if (years.get(new Integer(year)) == null) {
+            if (years.get(Integer.valueOf(year)) == null) {
                 YearDisplayState yds = getYearDisplayState(year);
                 yearComps.add(new JLabel("" + year));
                 yearComps.add(yds.getButton());
                 yearComps.add(GuiUtils.wrap(yds.getColorSwatch()));
                 yearComps.add(yds.getLabel());
-                years.put(new Integer(year), "");
+                years.put(Integer.valueOf(year), "");
                 if (yearComps.size() > 20) {
                     GuiUtils.tmpInsets = GuiUtils.INSETS_5;
                     yearPanels.add(GuiUtils.doLayout(yearComps, 4,
@@ -2119,10 +2119,10 @@ public class StormTrackControl extends DisplayControlImpl {
      */
     public YearDisplayState getYearDisplayState(int year) {
         YearDisplayState yearDisplayState =
-            yearDisplayStateMap.get(new Integer(year));
+            yearDisplayStateMap.get(Integer.valueOf(year));
         if (yearDisplayState == null) {
             yearDisplayState = new YearDisplayState(this, year);
-            yearDisplayStateMap.put(new Integer(year), yearDisplayState);
+            yearDisplayStateMap.put(Integer.valueOf(year), yearDisplayState);
         }
         return yearDisplayState;
     }
@@ -2138,7 +2138,7 @@ public class StormTrackControl extends DisplayControlImpl {
             yearDisplayStateMap = new Hashtable<Integer, YearDisplayState>();
             for (YearDisplayState yearDisplayState : value) {
                 yearDisplayStateMap.put(
-                    new Integer(yearDisplayState.getYear()),
+                    Integer.valueOf(yearDisplayState.getYear()),
                     yearDisplayState);
             }
         }
